WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
60459
Inline elements are wrapped prematurely with non-zero border, margin or padding.
https://bugs.webkit.org/show_bug.cgi?id=60459
Summary
Inline elements are wrapped prematurely with non-zero border, margin or padding.
Samuel Williams
Reported
2011-05-09 00:46:34 PDT
Created
attachment 92766
[details]
Test case that fails. See the example. The number of nested span elements is proportional to the amount of incorrect space required on the RHS. Simply resize the window and you will see that the span elements are wrapped with plenty of space to spare. This appears to be incorrect behavior, works fine in FF, but also broken in Chrome (uses WebKit too right?). Thanks Samuel
Attachments
Test case that fails.
(576 bytes, text/html)
2011-05-09 00:46 PDT
,
Samuel Williams
no flags
Details
A screen shot comparing Firefox to Safari to show the incorrect behavior.
(105.87 KB, image/png)
2011-05-09 00:47 PDT
,
Samuel Williams
no flags
Details
Compare display: inline and display: inline-block
(1.20 KB, text/html)
2011-05-09 01:02 PDT
,
Samuel Williams
no flags
Details
Patch.
(25.86 KB, patch)
2011-06-04 18:27 PDT
,
Yael
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Samuel Williams
Comment 1
2011-05-09 00:47:24 PDT
Created
attachment 92767
[details]
A screen shot comparing Firefox to Safari to show the incorrect behavior.
Samuel Williams
Comment 2
2011-05-09 01:02:11 PDT
Created
attachment 92769
[details]
Compare display: inline and display: inline-block I have been doing some more testing, and I found that if I add "display: inline-block;" to the top span, it shows how one might expect the wrapping to look. Unfortunately, inline-block isn't suitable because it doesn't break into separate pieces like a normal inline span.
Yael
Comment 3
2011-06-04 18:27:56 PDT
Created
attachment 96040
[details]
Patch.
Eric Seidel (no email)
Comment 4
2011-06-04 19:49:34 PDT
This isn't a regression from earlier padding changes for bidi, right?
Yael
Comment 5
2011-06-05 06:09:01 PDT
(In reply to
comment #4
)
> This isn't a regression from earlier padding changes for bidi, right?
No. I have a build of QtWebKit 2.1 from almost a year ago, and I can reproduce the error there too.
Eric Seidel (no email)
Comment 6
2011-06-05 08:24:36 PDT
Comment on
attachment 96040
[details]
Patch. Looks OK to me. I would like mitz or leviw to comment before you land though.
Levi Weintraub
Comment 7
2011-06-06 10:30:32 PDT
(In reply to
comment #6
)
> (From update of
attachment 96040
[details]
) > Looks OK to me. I would like mitz or leviw to comment before you land though.
LGTM! Thanks for the heads up :)
Yael
Comment 8
2011-06-06 10:52:13 PDT
(In reply to
comment #7
)
> (In reply to
comment #6
) > > (From update of
attachment 96040
[details]
[details]) > > Looks OK to me. I would like mitz or leviw to comment before you land though. > > LGTM! Thanks for the heads up :)
Thank you both :)
WebKit Commit Bot
Comment 9
2011-06-06 11:33:08 PDT
Comment on
attachment 96040
[details]
Patch. Clearing flags on attachment: 96040 Committed
r88175
: <
http://trac.webkit.org/changeset/88175
>
WebKit Commit Bot
Comment 10
2011-06-06 11:33:14 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug